--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+<script type="text/javascript" src="https://js-cdn.dynatracelabs.com/jstag/1468ae7109d/bf79816mdn/bb1c566141405fa6_complete.js" crossorigin="anonymous"></script>
         
     </head>
     <body>
